# CMScript

./: .gitmodules  CMakeLists.txt  IMPLEMENTATION_SUMMARY.md  README.md  VALIDATION.md  WASI_SDK_IMPLEMENTATION.md  path_config.cmake
docs/: DevilScript_Goals_Constraints.md  DevilScript_Roadmap.md  WASI_SDK_GUIDE.md  WASI_SDK_QUICK_REFERENCE.md
examples/: CMakeLists.txt  DevilBytecodePerf.cpp  DevilBytecodeTests.cpp  DevilSyntaxTests.cpp  goto_devilvm.cpp  hello_devilvm.cpp  hello_wamr.cpp  hello_wasmedge.cpp
examples/wasm/: README.md  add.c  math_lib.c  string_ops.c
inc/hgl/devil/: DevilBytecode.h  DevilContext.h  DevilModule.h  DevilToken.h  DevilVM.h  DevilValue.h  VM.h
inc/hgl/script/: AngelVM.h  DevilVM.h  VM.h
inc/hgl/wasm/: VM.h  WasmContext.h  WasmModule.h  WasmVM.h
scripts/: README.md  compile_to_aot.bat  compile_to_aot.sh  compile_to_wasm.bat  compile_to_wasm.sh  download_wasi_sdk.bat  download_wasi_sdk.sh
src/: CMakeLists.txt  ScriptEmpty.cpp
src/AngelVM/: AngelContext.cpp  AngelModule.cpp  AngelObject.cpp  AngelString.cpp  AngelVM.cpp  CMakeLists.txt  contextmgr.cpp  contextmgr.h  scriptarray.cpp  scriptarray.h
src/AngelVM/jit_ver/add_on/autowrapper/: aswrappedcall.h
src/AngelVM/jit_ver/add_on/autowrapper/generator/: generateheader.cpp
src/AngelVM/jit_ver/add_on/contextmgr/: contextmgr.cpp  contextmgr.h
src/AngelVM/jit_ver/add_on/debugger/: debugger.cpp  debugger.h
src/AngelVM/jit_ver/add_on/scriptany/: scriptany.cpp
src/AngelVM/jit_ver/add_on/scriptarray/: scriptarray.cpp  scriptarray.h
src/AngelVM/jit_ver/add_on/scriptbuilder/: scriptbuilder.cpp  scriptbuilder.h
src/AngelVM/jit_ver/add_on/scriptdictionary/: scriptdictionary.cpp  scriptdictionary.h
src/AngelVM/jit_ver/add_on/scriptfile/: scriptfile.cpp  scriptfile.h
src/AngelVM/jit_ver/add_on/scripthandle/: scripthandle.cpp  scripthandle.h
src/AngelVM/jit_ver/add_on/scripthelper/: scripthelper.cpp  scripthelper.h
src/AngelVM/jit_ver/add_on/scriptmath/: scriptmath.cpp
src/AngelVM/jit_ver/add_on/scriptstdstring/: scriptstdstring.cpp  scriptstdstring_utils.cpp
src/AngelVM/jit_ver/add_on/serializer/: serializer.h
src/AngelVM/jit_ver/include/: angelscript.h
src/AngelVM/jit_ver/source/: as_array.h  as_atomic.cpp  as_builder.cpp  as_builder.h  as_bytecode.cpp  as_bytecode.h  as_callfunc.cpp  as_callfunc.h  as_callfunc_arm.cpp  as_callfunc_mips.cpp  as_callfunc_ppc.cpp  as_callfunc_ppc_64.cpp  as_callfunc_sh4.cpp  as_callfunc_x64_gcc.cpp  as_callfunc_x64_mingw.cpp  as_callfunc_x64_msvc.cpp  as_callfunc_x86.cpp  as_callfunc_xenon.cpp  as_compiler.cpp  as_compiler.h  as_config.h  as_configgroup.cpp  as_configgroup.h  as_context.cpp  as_context.h  as_criticalsection.h  as_datatype.cpp  as_datatype.h  as_debug.h  as_gc.cpp  as_gc.h  as_generic.cpp  as_globalproperty.cpp  as_map.h  as_memory.cpp  as_memory.h  as_module.cpp  as_module.h  as_objecttype.cpp  as_objecttype.h  (+26 more)
src/AngelVM/top_ver/add_on/contextmgr/: contextmgr.cpp
src/AngelVM/top_ver/add_on/debugger/: debugger.cpp  debugger.h
src/AngelVM/top_ver/add_on/scriptany/: scriptany.cpp
src/AngelVM/top_ver/add_on/scriptarray/: scriptarray.cpp  scriptarray.h
src/AngelVM/top_ver/add_on/scriptbuilder/: scriptbuilder.cpp  scriptbuilder.h
src/AngelVM/top_ver/add_on/scriptdictionary/: scriptdictionary.cpp  scriptdictionary.h
src/AngelVM/top_ver/add_on/scriptfile/: scriptfile.cpp
src/AngelVM/top_ver/add_on/scripthandle/: scripthandle.cpp  scripthandle.h
src/AngelVM/top_ver/add_on/scripthelper/: scripthelper.cpp
src/AngelVM/top_ver/add_on/scriptmath/: scriptmath.cpp
src/AngelVM/top_ver/add_on/scriptstdstring/: scriptstdstring.cpp  scriptstdstring_utils.cpp
src/AngelVM/top_ver/add_on/serializer/: serializer.h
src/AngelVM/top_ver/add_on/weakref/: weakref.cpp
src/AngelVM/top_ver/include/: angelscript.h
src/AngelVM/top_ver/source/: as_array.h  as_builder.cpp  as_builder.h  as_bytecode.cpp  as_bytecode.h  as_callfunc.cpp  as_callfunc.h  as_callfunc_arm.cpp  as_callfunc_mips.cpp  as_callfunc_ppc.cpp  as_callfunc_ppc_64.cpp  as_callfunc_sh4.cpp  as_callfunc_x64_mingw.cpp  as_callfunc_x64_msvc.cpp  as_callfunc_x86.cpp  as_callfunc_xenon.cpp  as_compiler.cpp  as_compiler.h  as_config.h  as_configgroup.cpp  as_configgroup.h  as_context.cpp  as_context.h  as_criticalsection.h  as_datatype.cpp  as_datatype.h  as_debug.h  as_gc.cpp  as_gc.h  as_generic.h  as_globalproperty.cpp  as_memory.cpp  as_module.cpp  as_module.h  as_objecttype.cpp  as_objecttype.h  as_parser.cpp  as_parser.h  as_restore.cpp  as_restore.h  (+16 more)
src/DevilVM/: CMakeLists.txt  DevilAst.cpp  DevilAst.h  DevilBytecode.cpp  DevilBytecodeBuilder.cpp  DevilBytecodeBuilder.h  DevilBytecodeDisasm.cpp  DevilBytecodeNative.cpp  DevilBytecodeSerialize.cpp  DevilCallConvX8632.cpp  DevilCommand.cpp  DevilCommand.h  DevilContext.cpp  DevilContext.h  DevilEnum.h  DevilFunc.cpp  DevilFunc.h  DevilModule.cpp  DevilModule.h  DevilParse.cpp  DevilParse.h  DevilVM.cpp  DevilVariable.h  GccCallX64.cpp  as_tokendef.h  as_tokenizer.cpp  as_tokenizer.h  h.txt
src/WasmVM/: CMakeLists.txt  README.md  WasmVM.cpp
src/WasmVM/WAMR/: WAMRContext.cpp  WAMRContext.h  WAMRModule.cpp  WAMRModule.h
src/WasmVM/WasmEdge/: WasmEdgeContext.cpp  WasmEdgeContext.h  WasmEdgeModule.cpp  WasmEdgeModule.h
