option(CMSCRIPT_ENABLE_DEVIL "Build DevilScript backend" ON)
option(CMSCRIPT_ENABLE_WASM "Build WASM VM backend" ON)

set(CMSCRIPT_SOURCES
	ScriptEmpty.cpp
)

set(CMSCRIPT_INCLUDE_DIRS
	${CMSCRIPT_ROOT_INCLUDE_PATH}
)

set(CMSCRIPT_LIBRARIES
)

if(CMSCRIPT_ENABLE_DEVIL)
	add_subdirectory(DevilVM)
	list(APPEND CMSCRIPT_SOURCES ${DEVIL_SCRIPT_SOURCES})
	list(APPEND CMSCRIPT_INCLUDE_DIRS ${DEVIL_SCRIPT_INCLUDE_DIRS})
endif()

if(CMSCRIPT_ENABLE_WASM)
	add_subdirectory(WasmVM)
	list(APPEND CMSCRIPT_SOURCES ${WASM_VM_SOURCES})
	list(APPEND CMSCRIPT_INCLUDE_DIRS ${WASM_VM_INCLUDE_DIRS})
	list(APPEND CMSCRIPT_LIBRARIES ${WASM_VM_LIBRARIES})
endif()

add_cm_library(CMScript "CM" ${CMSCRIPT_ROOT_INCLUDE_PATH} ${CMSCRIPT_SOURCES})

if(TARGET ${DEVIL_VM_CALLX64_TARGET})
	add_dependencies(CMScript ${DEVIL_VM_CALLX64_TARGET})
endif()

if(CMSCRIPT_ENABLE_DEVIL)
	target_include_directories(CMScript PRIVATE ${DEVIL_SCRIPT_INCLUDE_DIRS})
endif()

if(CMSCRIPT_ENABLE_WASM)
	target_include_directories(CMScript PRIVATE ${WASM_VM_INCLUDE_DIRS})
	target_link_libraries(CMScript PRIVATE ${CMSCRIPT_LIBRARIES})
endif()
